[package]
name = "fltk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "hello_world",
    "flutter_like",
    "theme",
]

[workspace.dependencies]
fltk = { version = "^1.4", git = "https://github.com/fltk-rs/fltk-rs" }