[package]
name = "menu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { workspace = true, features = [
    "menu",
    "quad",
    "icon_text"
] }
iced = {workspace = true, features = ["svg"]}